[dependencies]
clap = {default-features = false, features = [
  "color",
  "derive",
  "help",
  "std",
  "suggestions",
  "usage"
], version = "=4.5.0"}
env_logger = {default-features = false, features = [
  "auto-color",
  "humantime"
], version = "=0.11.2"}
futures = {default-features = false, version = "=0.3.30"}
log = {default-features = false, version = "=0.4.20"}
nameof = {default-features = false, version = "=1.2.2"}
procfs = {default-features = false, version = "=0.16.0"}
tokio = {default-features = false, features = [
  "macros",
  "rt",
  "signal",
  "time"
], version = "=1.36.0"}
tokio-util = {default-features = false, version = "=0.7.10"}
zbus = {default-features = false, features = ["tokio"], version = "=4.0.1"}

[package]
edition = "2021"
license = "MIT"
name = "memalert"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
